--- a/rhodecode/bin/install
+++ b/rhodecode/bin/install
@@ -8,8 +8,8 @@ URL=`cat ${CACHE}/MANIFEST | \
       sed -E -e "s/.+ //" | \
       grep $1`
 
-FILE=`echo ${URL} | sed -E -e "s|^.*/||"`
 LINK=$2
+FILE="${LINK}.tar.gz"
 
 aria2c -d ${CACHE} -o ${FILE} -j 10 $URL
 cd /opt/rhodecode
